--- a/welcomepage.html
+++ b/welcomepage.html
@@ -19,13 +19,12 @@
         </section>
        
     <section class="col ">
-        <h1>Welcome!</h1>
-        <p>Thanks for choosing us ,Sign Up to start</p>
-      <div> <div href="signup.html" class="btn btn-primary col-md-10">Get Started</div></div> 
+        <h1>Welcome</h1>
+        <p>We 're glad you 're here! Sign up to start browing the website. </p>
+      <div> <div onclick="window.open('signup.html')" class="btn btn-warning col-md-10">Get Started</div></div> 
         </section>
     </div>
    </div>
-
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 
