start calling the register api

--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,7 @@
                     <div class="input-icons">  <i class="fas fa-lock"><hr></i>
                     <input id="confirmPassword" class="input-field form-control pt-2 pb-2" type="password" placeholder="Confirm password">
                     <p class="error confirmpassword-error"></p> </div>
-                    <div id="btn" class="btn btn-warning mb-2 d-block">Create Account</div></div>
+                    <button id="btn" class="btn btn-warning mb-2 d-block">Create Account</button></div>
                 </form>
                   </section>
             </div> 
